# Rebel

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/engine/: CMakeLists.txt
lib/engine/include/rebel/engine/: service_locator.hpp
lib/engine/include/rebel/engine/platform/: engine.hpp  entry_point.hpp  window.hpp
lib/engine/include/rebel/engine/rendering/: renderer.hpp
lib/engine/src/: build_version.hpp.in
lib/engine/src/platform/: engine.cpp  rebel_window.cpp  rebel_window.hpp
lib/ext/: CMakeLists.txt
lib/interface/: CMakeLists.txt
lib/interface/include/rebel/: defines.hpp
lib/util/: CMakeLists.txt
lib/util/include/rebel/util/: error.hpp  mufo.hpp  version.hpp
lib/util/src/: version.cpp
lib/vk/: CMakeLists.txt
lib/vk/include/rebel/vk/: spir_v.hpp  vulkan_initializers.hpp  vulkan_renderer.hpp  vulkan_utilities.hpp
lib/vk/src/: spir_v.cpp  vulkan_initializers.cpp  vulkan_renderer.cpp
src/: main.cpp
src/shaders/: triangle.frag  triangle.vert
tools/embed_shader/: CMakeLists.txt  embed_shader.cpp
